// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client scopes create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "94",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "scope": {
      "description": "This is a scope",
      "name": "My New Scope",
      "scope_suffix": "some-suffix",
    },
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/scopes",
}
`;

exports[`client scopes get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/scopes/mock-scope-id",
}
`;

exports[`client scopes next create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "94",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "scope": {
      "description": "This is a scope",
      "name": "My New Scope",
      "scope_suffix": "some-suffix",
    },
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/scopes",
}
`;

exports[`client scopes next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/scopes/mock-scope-id",
}
`;
